<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/determinateBar"
            style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="40" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/turkey2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:paddingLeft="6dp"
            android:text="@string/question_two"
            android:textColor="@color/primary_text"
            android:textSize="26sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/quiz_two_checkbox_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:text="@string/checkbox_one"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/quiz_two_checkbox_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:text="@string/checkbox_two"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/quiz_two_checkbox_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:text="@string/checkbox_three"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/quiz_two_checkbox_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:text="@string/checkbox_four"
            android:textSize="18sp" />

        <Button
            android:id="@+id/launch_quiz_3_activity"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="16dp"
            android:text="@string/next" />

    </LinearLayout>
</ScrollView>