<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/determinateBar"
            style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="95" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/dolphin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:paddingLeft="6dp"
            android:text="@string/question_five"
            android:textColor="@color/primary_text"
            android:textSize="26sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonFiveClicked"
                android:paddingLeft="25dp"
                android:tag="0"
                android:text="@string/radio_smell"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonFiveClicked"
                android:paddingLeft="25dp"
                android:tag="1"
                android:text="@string/radio_sight"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonFiveClicked"
                android:paddingLeft="25dp"
                android:tag="2"
                android:text="@string/radio_touch"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonFiveClicked"
                android:paddingLeft="25dp"
                android:tag="3"
                android:text="@string/radio_hearing"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radio_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonFiveClicked"
                android:paddingLeft="25dp"
                android:tag="4"
                android:text="@string/radio_taste"
                android:textSize="18sp" />
        </RadioGroup>

        <Button
            android:id="@+id/launch_pre_submit_activity"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="16dp"
            android:text="@string/next" />

    </LinearLayout>
</ScrollView>