<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:fontFamily="cursive"
            android:text="@string/thank_you"
            android:textColor="@color/primary_text"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:src="@drawable/animalkingdom" />

        <TextView
            android:id="@+id/showScoreRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:fontFamily="serif-monospace"
            android:text="@string/score_message_rating"
            android:textColor="@color/primary_text"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/showScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:fontFamily="serif-monospace"
            android:text="@string/score_message"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="2dp"
            android:fontFamily="serif-monospace"
            android:text="@string/almost_done_2"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:fontFamily="serif-monospace"
            android:text="@string/share_score"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="16dp"
            android:layout_marginTop="45dp"
            android:background="@color/primary"
            android:onClick="shareScoreBtn"
            android:text="@string/share_score_btn" />
    </LinearLayout>
</ScrollView>