<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/determinateBar"
            style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="80" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/lions" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:paddingLeft="6dp"
            android:text="@string/question_four"
            android:textColor="@color/primary_text"
            android:textSize="26sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/quiz_four_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/request_answer"
            android:inputType="text"
            android:textSize="18dp" />

        <Button
            android:id="@+id/launch_quiz_5_activity"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="16dp"
            android:text="@string/next" />

    </LinearLayout>
</ScrollView>